2008-01-01  Torsten Rahn  <rahn@kde.org>

    * src/lib/MarbleWidget.cpp:
    * src/lib/MarbleModel.{cpp,h}:
    * src/lib/ViewParams.cpp:

    - Getting rid of m_downloadManager in MarbleWidget to simplify code.
    - Thereby fixed a mem leak concerning the same issue.

2008-01-01  Torsten Rahn  <rahn@kde.org>

    * src/lib/MarbleWidget.cpp:
    * src/lib/ViewParams.cpp:
    Initialize m_canvasimg before the model gets instantiated.

2008-01-01  Torsten Rahn  <rahn@kde.org>

    * src/lib/MarbleModel.cpp: Initialize.

2008-01-01  Torsten Rahn  <rahn@kde.org>

    * src/lib/MarbleModel.cpp: more paranoid check whether the 
      .dgml file has been opened successfully.

2007-12-31  Torsten Rahn  <rahn@kde.org>

    * src/lib/PlaceMarkLayout.{cpp,h}:
    * src/lib/MarbleModel.cpp:
    * src/lib/VisiblePlaceMark.cpp:

    - Fixing a crash reported by Claudiu Costin.

2007-12-31    Inge Wallin  <inge@lysator.liu.se>

	* src/ControlView.h (marbleControl): New function
	* src/lib/MarbleControlBox.{h,cpp} (updateMapThemes): New function
	(constructor): call updateMapThemes().
	* src/marble_part.cpp (showNewStuffDialog): update the map themes 
	list in the controlbox.
	(misc): cleaning
	* src/lib/MapTheme.cpp: cleaning
	* src/lib/MarbleModel.cpp: cleaning	

2007-12-31  Torsten Rahn  <rahn@kde.org>

    * src/plugins/navigator/CMakeLists.txt:
    - Fix MarbleNavigator Plugin

    Icons for projection combobox:
    * src/marble.qrc:
    * src/lib/MarbleControlBox.ui:
    * src/icons/map-flat.png:
    * src/icons/map-globe.png:


2007-12-31  Torsten Rahn  <rahn@kde.org>

    * src/lib/MarbleWidget.h:
    * src/lib/MarbleModel.{cpp, h}:
    - Fixing the missing selection in the map view tab once
      the map setting gets restored. + Adding related API docs.

2007-12-31  Torsten Rahn  <rahn@kde.org>

    * lib/MeasureTool.cpp: Fixed partial disappearance of the 
      measureline east to the date line. 

2007-12-30  Torsten Rahn  <rahn@kde.org>
